--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
 </head>
 <body class="work-sans-font"> <!-- Google-front-Setup-->
     <!-- HEADER  -->
-    <header>
-        <nav class="navbar">
+    <header class="bg-light">
+        <nav class="navbar display-flex">
             <h3 class="text-logo">G3 Architects</h3>
+            <ul class="nav-links display-flex">
+                <!-- li.nav-items*4>a.nav-link -->
+                 <li class="nav-item"><a href="" class="nav-link text-gray">Home</a></li>
+                 <li class="nav-item"><a href="" class="nav-link text-gray">About</a></li>
+                 <li class="nav-item"><a href="" class="nav-link text-gray">Contact us</a></li>
+                 <li class="nav-item"><a href="" class="nav-link text-gray">Login</a></li>
+            </ul>
         </nav>
+        <div class="banner">
+
+        </div>
     </header>
 
     <!-- MAIN  -->
