10-3 Resposive Banner For Mobile and medium devices

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
             </ul>
         </nav>
         <div class="banner">
-
+            <div class="banner-content ">
+            <h1 class="banner-tittle"> Brand New Group of Architects</h1>
+            <p class="banner-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas voluptatem atque delectus repellendus deserunt consequuntur aliquid dignissimos? Aliquam exercitationem reiciendis, a nesciunt quisquam similique! Voluptas atque laudantium officia deleniti ratione.</p>
+            <button class="btn-primary">Explore More</button>
+            </div>
+            <img class="banner-img" src="./g3-architects-resources/images/banner.png">
         </div>
     </header>
 
