10-4 Teams Section With Flex And Grid Layout

--- a/index.html
+++ b/index.html
@@ -30,9 +30,28 @@
     </header>
 
     <!-- MAIN  -->
-     <main>
+    <main>
+        <section class="teams display-flex">
+            <div class="team-image-container">
+                <img src="./g3-architects-resources/images/team1.png" alt="team1">
+                <img src="./g3-architects-resources/images/team2.png" alt="team2">
+                <img src="./g3-architects-resources/images/team3.png" alt="team3">
+                <img src="./g3-architects-resources/images/team4.png" alt="team4">
 
-     </main>
+            </div>
+            <div class="our-features">
+                <h1 class="feature-tittle">
+                    <span id="Quick-list" class="text-gray">Quick list</span> 
+                    <span class="of-our">of Our</span>
+                    <span id="Features">Features</span>
+                </h1>
+                <p class="feature-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa, adipisci. Iste necessitatibus iure sapiente nemo mollitia dignissimos, illo quaerat assumenda quae at reiciendis? Veritatis, ad dolorem totam voluptates consequatur exercitationem!</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+
+        </section>
+
+    </main>
 
     <!-- Footer -->
      <footer>
