10-5 make Teams Section Responsive And Shared Css Class

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="work-sans-font"> <!-- Google-front-Setup-->
     <!-- HEADER  -->
-    <header class="bg-light">
+    <header class="bg-light display-none">
         <nav class="navbar display-flex">
             <h3 class="text-logo">G3 Architects</h3>
             <ul class="nav-links display-flex">
@@ -31,6 +31,7 @@
 
     <!-- MAIN  -->
     <main>
+        <!-- Teams Section -->
         <section class="teams display-flex">
             <div class="team-image-container">
                 <img src="./g3-architects-resources/images/team1.png" alt="team1">
@@ -40,16 +41,72 @@
 
             </div>
             <div class="our-features">
-                <h1 class="feature-tittle">
+                <h1 class="section-tittle">
                     <span id="Quick-list" class="text-gray">Quick list</span> 
                     <span class="of-our">of Our</span>
-                    <span id="Features">Features</span>
+                    <span class="Features text-primary">Features</span>
                 </h1>
-                <p class="feature-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa, adipisci. Iste necessitatibus iure sapiente nemo mollitia dignissimos, illo quaerat assumenda quae at reiciendis? Veritatis, ad dolorem totam voluptates consequatur exercitationem!</p>
+                <p class="feature-description text-gray">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa, adipisci. Iste necessitatibus iure sapiente nemo mollitia dignissimos, illo quaerat assumenda quae at reiciendis? Veritatis, ad dolorem totam voluptates consequatur exercitationem!</p>
                 <button class="btn-primary">Explore More</button>
             </div>
-
         </section>
+        <!-- Features will enjoy  -->
+        <section>
+            <h3 class="section-tittle">Some Facts</h3>
+            <p class="text-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <!-- .fact-container*4>img+h4.fact-number+h5.fact-name -->
+             <div class="fact-container">
+                <img src="./g3-architects-resources/images/icons/ribon.png" alt="ribon icon">
+                <h4 class="fact-number">54</h4>
+                <h5 class="fact-name">Awards Winnings</h5>
+             </div>
+             <div class="fact-container">
+                <img src="./g3-architects-resources/images/icons/projects.png" alt="Project Icon">
+                <h4 class="fact-number">1458</h4>
+                <h5 class="fact-name">Project Finished</h5>
+             </div>
+             <div class="fact-container">
+                <img src="./g3-architects-resources/images/icons/customers.png" alt="Customer icon ">
+                <h4 class="fact-number">590</h4>
+                <h5 class="fact-name">Clients Worked</h5>
+             </div>
+             <div class="fact-container">
+                <img src="./g3-architects-resources/images/icons/email.png" alt="Email Icon">
+                <h4 class="fact-number">22578</h4>
+                <h5 class="fact-name">Email Send</h5>
+             </div>
+        </section>
+
+        <!-- Some facts -->
+        <!-- <section class="project-section">
+        <div class="project-content">
+            <h1>Some Facts</h1>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </div>
+        <div class="project-items">
+            <div class="project-item">
+                <img src="./g3-architects-resources/images/icons/ribon.png" alt="ribon png">
+                <h1>54</h1>
+                <p>Awards Winnings</p>
+            </div>
+                <div class="project-item">
+                <img src="./g3-architects-resources/images/icons/projects.png" alt="ribon png">
+                <h1>54</h1>
+                <p>Project Finished</p>
+            </div>
+                <div class="project-item">
+                <img src="./g3-architects-resources/images/icons/customers.png" alt="ribon png">
+                <h1>590</h1>
+                <p>Clients Worked</p>
+            </div>
+                <div class="project-item">
+                <img src="./g3-architects-resources/images/icons/email.png" alt="ribon png">
+                <h1>22578</h1>
+                <p>Email Send</p>
+            </div>
+            
+        </div>
+        </section> -->
 
     </main>
 
