10-7 Make Facts And Sponsors Responsive

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </section>
 
 
-        <!-- Features will enjoy  -->
+        <!-- Some Facts  -->
         <section>
 
             <h3 class="section-tittle">Some Facts</h3>
@@ -92,6 +92,20 @@
             </div>
         </section>
 
+        <!-- Our Sponsor  -->
+         <Section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-tittle">Our Sponsors</h3>
+                <p class="text-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-company">
+                <img src="./g3-architects-resources/images/sponsors/amazon.png" alt="">
+                <img src="./g3-architects-resources/images/sponsors/figma.png" alt="">
+                <img src="./g3-architects-resources/images/sponsors/google.png" alt="">
+                <img src="./g3-architects-resources/images/sponsors/spotify.png" alt="">
+                <img src="./g3-architects-resources/images/sponsors/telerama.png" alt="">
+            </div>
+         </Section>
      
     </main>
 
