--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -32,7 +32,7 @@
     <!-- MAIN  -->
     <main>
         <!-- Teams Section -->
-        <section class="teams display-flex">
+        <section class="teams display-flex display-none">
             <div class="team-image-container">
                 <img src="./g3-architects-resources/images/team1.png" alt="team1">
                 <img src="./g3-architects-resources/images/team2.png" alt="team2">
@@ -50,10 +50,47 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+        <!-- Feature Section Start -->
+        <section class="feature display-flex">
+            <div>
+                <h3 id="feature-section-tittle" class="section-tittle">Features you will <br>
+                 love & enjoy</h3>
+                <p class="text-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                 
+                <!-- feature card container -->
 
+                <div class="feature-card">
+                    <h4 class="feature-tittle">Desktop & Mobile Version</h4>
+                    <p class="text-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+
+                <div class="feature-card">
+                    <h4 class="feature-tittle">Desktop & Mobile Version</h4>
+                    <p class="text-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+
+                <div class="feature-card">
+                    <h4 class="feature-tittle">Desktop & Mobile Version</h4>
+                    <p class="text-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+
+                <div class="feature-card">
+                    <h4 class="feature-tittle">Desktop & Mobile Version</h4>
+                    <p class="text-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div> 
+                <img src="./g3-architects-resources/images/architect.png" alt="" srcset="">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-badge">10+Years</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+        </section>
 
         <!-- Some Facts  -->
-        <section>
+        <section class="display-none">
 
             <h3 class="section-tittle">Some Facts</h3>
             <p class="text-gray fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
