10-9 Module Summary And Github Page Display

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                     <p class="text-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                 </div>
             </div>
-            <div> 
+            <div class="feature-architect"> 
                 <img src="./g3-architects-resources/images/architect.png" alt="" srcset="">
                 <button id="experience-badge" class="btn-primary">
-                    <span id="experience-badge">10+Years</span>
+                    <span id="experience-year">10+Years</span>
                     <br>
                     <span>Experience</span>
                 </button>
@@ -147,8 +147,10 @@
     </main>
 
     <!-- Footer -->
-     <footer>
-
-     </footer>
+     <footer class="footer-section">
+        <div >
+        <p class="text-gray footer-tittle">All rights reserved copyright@2023 startup landing page design</p>
+        </div>
+    </footer>
 </body>
 </html>
